# relay

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: pages.yml
app/: catalog.py  config.py  db.py  listener_main.py  main.py  models.py  schemas.py
app/api/: accounts.py  catalog.py  dependencies.py  gateway.py  internal.py
app/providers/: llm.py  search.py
app/services/: accounts.py  billing.py  chain_listener.py  deposits.py  rate_limit.py
docs/: mvp-implementation.md  mvp.md
scripts/: manual_smoke.sh
site/: index.html  styles.css  zh.html
tests/: conftest.py
tests/integration/: test_accounts_api.py  test_api_calls_query.py  test_auth_rate_limit.py  test_catalog_api.py  test_deposits_api.py  test_gateway_fixed_ocr.py  test_gateway_fixed_search.py  test_gateway_llm_reserve_settle.py  test_gateway_request_validation.py
tests/unit/: test_api_calls_indexes.py  test_chain_listener.py  test_deposit_model_constraints.py  test_landing_page.py  test_rate_limit.py  test_search_provider.py
