[project]
name = "relay"
version = "0.1.0"
description = "Relay prepaid API gateway MVP"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic-settings>=2.8,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0,<10.0",
]
chain = [
  "web3>=7.0,<8.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
